added links and images

--- a/homework1.html
+++ b/homework1.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="shoes.css"> 
 </head>
 <body>
-    <header>
+    <header >
         <h1>Панин Мирослав</h1>
     </header>
-    <main>
+    <main id="2">
+        <img src="./1339003.jpg" height="600px" width="1000px">
+    <img src="https://vkplay.ru/hotbox/content_files/Stories/2024/03/21/4eeaf6c79f644806872153a10df98391.jpg" width="1000px" height="600px">
         <p>Я студент МУИТ <br>2 курс на факультете <b>"Кибербезопасность"</b> <br><i>Тренируюсь в фитнес-зале
         интересно смотреть баскетбол</i></p>
     </main>
     <footer>
-        <ul class=" contacts">
+        <ul class=" contacts" id="1">
             <li>+7 777 777 7777</li>
-            <li><a>https://github.com/Miroslav-mobyDev/gitwork</a></li>
+            <li><a href="https://www.youtube.com" target="_blank">Youtube</a></li>
+            <li><a href="1">Cсылка к контактам</a></li>
+            <li><a href="2">Cсылка к главной части</a></li>
         </ul>
     </footer>
     
