added table , unordered list and ordered list

--- a/homework1.html
+++ b/homework1.html
@@ -15,6 +15,42 @@
     <img src="https://vkplay.ru/hotbox/content_files/Stories/2024/03/21/4eeaf6c79f644806872153a10df98391.jpg" width="1000px" height="600px">
         <p>Я студент МУИТ <br>2 курс на факультете <b>"Кибербезопасность"</b> <br><i>Тренируюсь в фитнес-зале
         интересно смотреть баскетбол</i></p>
+        <ul> Любимые игры
+            <li>Battlefield 1</li>
+            <li>Deus Ex:human Revolution</li>
+            <li>Max Payne 1,2,3</li>
+            <li>Need For Speed : Underground 1,2</li>
+            <li>Need For Speed: Most Wanted 2005,2012</li>
+        </ul>
+        <ol>Гайд на класс разведчика в Battlefield 1
+            <li>Найти спавн дальше от горячих точек</li>
+            <li>Найти позицию</li>
+            <li>Не стоять ровно,все время двигаться</li>
+            <li>Плмечать врагов</li>
+            <li>На ближних дистанциях стрелять без прицела</li>
+        </ol>
+        <table border="1">
+            <tr>
+                <th>Имя</th>
+                <th>Возраст</th>
+                <th>Город</th>
+            </tr>
+            <tr>
+                <td>Мирослав</td>
+                <td>25</td>
+                <td>Алматы</td>
+            </tr>
+            <tr>
+                <td>Анна</td>
+                <td>22</td>
+                <td>Астана</td>
+            </tr>
+            <tr>
+                <td>Иван</td>
+                <td>30</td>
+                <td>Шымкент</td>
+            </tr>
+        </table>
     </main>
     <footer>
         <ul class=" contacts" id="1">
