connected syle.css to html and made homework about selectors

--- a/homework2.html
+++ b/homework2.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>miroslavweb</title>
+        <link rel="stylesheet" href="syle.css">
     </head>
     <body>
         <form>
@@ -35,5 +36,18 @@
             <button type="reset">reset</button>
             </fieldset>
         </form>
+        <!--Задание с селекторами Урок 11 или 2.4-->
+        <h1 class="item_name">Invincible</h1>
+        <h2>Atom Eve</h2>
+        <!--Здесь я задал id и class для абзаца и показал что приоритет по id выше нежели просто селектор 
+        в виде тега или класса-->
+        <p class="comment" id="comment1">3rd season of "Invincible was actually amazing . Cant wait for next episode at thursday"</p>
+        <!--В итоге вывело черный цвет который я указал в селекторе id-->
+        <ul>Invincible Chatacters
+            <li>Rex</li>
+            <li>Omni-Man</li>
+            <li>Mark Grayson</li>
+            <li>Atom Eve</li>
+        </ul>
     </body>
 </html>
