completed task with inline and block elements

--- a/homework3.html
+++ b/homework3.html
@@ -17,5 +17,11 @@
     <div class="block">At last episode will be a fight Of Mark and Conquest</div>
     <div class="block1">At last episode will be a fight Of Mark and Conquest</div>
     <div class="block2">At last episode will be a fight Of Mark and Conquest</div>
+    <!--Задание по Уроку Линейные и блочные элементы-->
+
+    <h1 class="in_header">Atom Eve</h1><!--Блочный по умолчанию-->
+    <p class="in_text">Conquest</p><!--Блочный по умолчанию-->
+    <div class="in_container">Mark Grayson</div><!--Блочный по умолчанию-->
+    <img class="in_item" src="./1339003.jpg"><!--Строчный по умолчанию-->
    </body>
 </html>
