Fully comleted task with inline and block elements

--- a/homework3.html
+++ b/homework3.html
@@ -17,11 +17,19 @@
     <div class="block">At last episode will be a fight Of Mark and Conquest</div>
     <div class="block1">At last episode will be a fight Of Mark and Conquest</div>
     <div class="block2">At last episode will be a fight Of Mark and Conquest</div>
+
+
     <!--Задание по Уроку Линейные и блочные элементы-->
 
     <h1 class="in_header">Atom Eve</h1><!--Блочный по умолчанию-->
     <p class="in_text">Conquest</p><!--Блочный по умолчанию-->
     <div class="in_container">Mark Grayson</div><!--Блочный по умолчанию-->
     <img class="in_item" src="./1339003.jpg"><!--Строчный по умолчанию-->
+<!--Задание 3 урока по блочным и строчным элементам--> 
+    <div class="at_container">Darkkwing
+        <p class="at_text">Immortal</p>
+        <img class="at_picture" href="./1339003.jpg">
+        <a class="at_link" href="yotube.com">Yotube</a>
+    </div>
    </body>
 </html>
