Fully completed 3rd week module

--- a/homework3.html
+++ b/homework3.html
@@ -31,5 +31,30 @@
         <img class="at_picture" href="./1339003.jpg">
         <a class="at_link" href="yotube.com">Yotube</a>
     </div>
+    <!--Задания по псевдоклассам-->
+    <!--Задание 1-->
+    <input class="input" type="text">
+    <button class="button">Submit</button>
+    <!--Задание 2-->
+    <ul class="list">Lorem ipsum
+        <li class="list-element">ip</li>
+        <li class="list-element">sum</li>
+        <li class="list-element">lorem</li>
+    </ul>
+    <!--Задание 3-->
+    <div class="task3_block">
+        <ul>
+        <li class="task3_item"><p class="task3_text">OOOOOOOOo</p></li>
+        <li class="task3_item"><a href="youtube.com" class="task3_t">Youtube</a></li>
+        </ul>
+    </div>
+    <!--Задание 4-->
+    <div class="task4_block">
+        <ul>
+            <li class="task4_item"><p class="task4_text">OOOOOOOOo</p></li>
+            <li class="task4_item"><p class="task4_text">OOOOOOOOo</p></li>
+            <li class="task4_item"><p class="task4_text">OOOOOOOOo</p></li>
+        </ul>
+    </div>
    </body>
 </html>
