Completed tasks about Transformations and animations

--- a/homework6.html
+++ b/homework6.html
@@ -18,5 +18,16 @@
         <!--Задание 4-->
         <div class="block5"></div>
         <div class="block6"></div>
+
+        <!--Transformation&animation homework-->
+        <!--Задание 1-->
+        <div class="tr_block"></div>
+        <div class="tr_block2"></div>
+        <div class="tr_block3"></div>
+        <div class="tr_block4"></div>
+        <!--Задание 2-->
+        <div class="tr_block5"></div>
+        <!--Задание 3-->
+        <div class="tr_block6"></div>
     </body>
 </html>
